Se arregló el mapa para que se muestre en un Activity y no un fragment, teniendo así acceso a todas sus funcionalidades. Adicionalmente, se finalizó el cierre de sesión para la cuenta de Google. Correxión de errores menores

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -31,9 +31,9 @@
 
     <fragment
         android:id="@+id/nav_mapa"
-        android:name="com.example.login.fragments.Mapa"
-        android:label="@string/menu_mapa"
-        tools:layout="@layout/fragment_mapa" />
+        android:name="com.example.login.fragments.AbrirMapa"
+        android:label="@string/menu_mapa" >
+    </fragment>
 
     <fragment
         android:id="@+id/nav_cerrar"
