--- a/app/src/main/res/layout/app_bar_menulateral.xml
+++ b/app/src/main/res/layout/app_bar_menulateral.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuLateral">
+    tools:context=".ui.MenuLateral">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
