--- a/app/src/main/res/layout/fragment_abrir_mapa.xml
+++ b/app/src/main/res/layout/fragment_abrir_mapa.xml
@@ -3,12 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.Mapa">
-
-    <fragment
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:id="@+id/mapa_fragmento"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    tools:context=".fragments.AbrirMapa">
 
 </FrameLayout>
