Se programó que todos los fragments se puedan mostrar en pantalla.

--- a/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -5,7 +5,7 @@
     android:background="@drawable/degradado"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.InicioSesion">
+    tools:context=".Activities.InicioSesion">
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/google_button"
