--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -26,8 +26,8 @@
     <fragment
         android:id="@+id/nav_eventos"
         android:name="com.example.login.fragments.eventos"
-        android:label="@string/menu_perfil"
-        tools:layout="@layout/fragment_eventos"/>
+        android:label="@string/menu_eventos"
+        tools:layout="@layout/fragment_eventos" />
 
     <fragment
         android:id="@+id/nav_mapa"
