--- a/app/src/main/res/layout/fragment_editar_perfil.xml
+++ b/app/src/main/res/layout/fragment_editar_perfil.xml
@@ -1,14 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".fragments.editar_perfil">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ImageView
+        android:layout_marginTop="45dp"
+        android:id="@+id/fotoperfil"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:fontFamily="@font/fonts"
+        android:layout_height="wrap_content"
+        app:srcCompat="@mipmap/ic_launcher_round" />
 
-</FrameLayout>
+    <TextView
+        android:gravity="center"
+        android:layout_marginTop="25dp"
+        android:id="@+id/textnombre"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:fontFamily="@font/fonts"
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        android:textColor="#ffff"
+        android:background="@drawable/txtcont"
+        android:hint="NOMBRE"
+         />
+
+    <EditText
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:id="@+id/textcontrasena"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:textColor="#ffff"
+        android:fontFamily="@font/fonts"
+        android:ems="10"
+        android:hint="............"
+        android:background="@drawable/txtcont"
+        android:textAlignment="center"
+        android:inputType="textPassword" />
+
+    <Button
+        android:layout_marginTop="50dp"
+        android:id="@+id/actualizar"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:fontFamily="@font/fonts"
+        android:textSize="25dp"
+        android:background="@drawable/btnperfil"
+        android:textColor="@drawable/txtbtninicio"
+        android:text="ACTUALIZAR" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </ScrollView>
+</LinearLayout>
