--- a/app/src/main/res/layout/fragment_editar_perfil.xml
+++ b/app/src/main/res/layout/fragment_editar_perfil.xml
@@ -5,62 +5,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/editarperf"
     tools:context=".fragments.editar_perfil">
 
     <ImageView
-        android:layout_marginTop="45dp"
         android:id="@+id/fotoperfil"
-        android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:fontFamily="@font/fonts"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="55dp"
+
+        android:fontFamily="@font/fonts"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
-        android:gravity="center"
-        android:layout_marginTop="25dp"
         android:id="@+id/textnombre"
         android:layout_width="350dp"
         android:layout_height="50dp"
-        android:fontFamily="@font/fonts"
-        android:textAlignment="center"
         android:layout_gravity="center"
-        android:textColor="#ffff"
+        android:layout_marginTop="30dp"
         android:background="@drawable/txtcont"
-        android:hint="NOMBRE"
-         />
-
-    <EditText
-        android:layout_marginTop="15dp"
+        android:fontFamily="@font/fonts"
         android:gravity="center"
-        android:layout_gravity="center"
-        android:id="@+id/textcontrasena"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:textColor="#ffff"
-        android:fontFamily="@font/fonts"
-        android:ems="10"
-        android:hint="............"
-        android:background="@drawable/txtcont"
+        android:hint="NOMBRE"
         android:textAlignment="center"
-        android:inputType="textPassword" />
+        android:textColor="#ffff" />
 
     <Button
-        android:layout_marginTop="50dp"
         android:id="@+id/actualizar"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:gravity="center"
-        android:fontFamily="@font/fonts"
-        android:textSize="25dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/btnperfil"
+        android:fontFamily="@font/fonts"
+        android:gravity="center"
+        android:text="ACTUALIZAR"
         android:textColor="@drawable/txtbtninicio"
-        android:text="ACTUALIZAR" />
+        android:textSize="25dp" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </ScrollView>
 </LinearLayout>
