--- a/app/src/main/res/layout/activity_menulateral.xml
+++ b/app/src/main/res/layout/activity_menulateral.xml
@@ -5,12 +5,14 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
     <include
         layout="@layout/app_bar_menulateral"
         android:layout_width="match_parent"
+        app:itemTextColor="@color/colorPrimaryDark"
         android:layout_height="match_parent" />
 
     <com.google.android.material.navigation.NavigationView
@@ -19,7 +21,8 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-
+        app:itemTextColor="@color/colorPrimaryDark"
+        app:itemIconTint="@color/colorAnaranjado"
         app:headerLayout="@layout/nav_header_menulateral"
         app:menu="@menu/activity_menulateral_drawer" />
 
