--- a/app/src/main/res/layout/nav_header_menulateral.xml
+++ b/app/src/main/res/layout/nav_header_menulateral.xml
@@ -27,12 +27,16 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/nav_header_title"
+        android:textSize="17dp"
+        android:fontFamily="@font/fonts"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/correoUsuario"
+        android:textSize="17dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/fonts"
         android:text="@string/nav_header_subtitle" />
 
 </LinearLayout>
