--- a/app/src/main/res/layout/fragment_editar_perfil.xml
+++ b/app/src/main/res/layout/fragment_editar_perfil.xml
@@ -9,7 +9,7 @@
     android:id="@+id/editarperf"
     tools:context=".fragments.editar_perfil">
 
-    <ImageView
+    <ImageButton
         android:id="@+id/fotoperfil"
         android:layout_width="160dp"
         android:layout_height="160dp"
