--- a/app/src/main/res/layout/custom_layout.xml
+++ b/app/src/main/res/layout/custom_layout.xml
@@ -3,13 +3,29 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/degradado"
     android:orientation="vertical"
     android:layout_height="match_parent">
 
-    <ImageView
+    <TextView
+        android:id="@+id/textView3"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
+        android:layout_height="121dp" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/fonts"
+        android:gravity="center"
+        android:text="ÚLTIMOS EVENTOS"
+        android:textColor="@color/colorblanco"
+        android:textSize="50dp" />
+
+    <ImageView
         android:id="@+id/image_view"
+        android:layout_width="match_parent"
+        android:layout_height="415dp"
 
         android:scaleType="centerCrop"
         tools:ignore="MissingConstraints" />
