Se muestran todos los eventos de forma dinamica en la ventana de "Eventos" dentro de la aplicacion. Para ello, se creo una data class de Eventos, una clase de AdaptadorEventos (que enlaza los datos obtenidos de la consulta a la API con el xml de los eventos) y el xml del layout de los eventos

--- a/app/src/main/res/layout/fragment_eventos.xml
+++ b/app/src/main/res/layout/fragment_eventos.xml
@@ -5,15 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".fragments.eventos">
 
-
-    <ScrollView
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <androidx.recyclerview.widget.RecyclerView
+            tools:listitem = "@layout/fragment_eventos"
+            android:id="@+id/recyclerViewModel"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
+            android:layout_height="match_parent"/>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
