--- a/app/src/main/res/layout/layout_eventos.xml
+++ b/app/src/main/res/layout/layout_eventos.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:background="@drawable/degradado"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
@@ -13,10 +14,12 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
+            android:background="@color/colorAccent"
             android:layout_height="wrap_content">
 
             <RelativeLayout
                 android:layout_width="match_parent"
+                android:background="@color/colorPrimary"
                 android:layout_height="195dp">
 
                 <ImageView
@@ -28,10 +31,11 @@
 
                 <TextView
                     android:id="@+id/textoNuevoEvento"
-                    android:background="#1C9603"
+                    android:background="@color/colorAccent"
                     android:textSize="12sp"
                     android:padding="2dp"
                     android:width="80dp"
+                    android:backgroundTint="@color/colorPrimaryDark"
                     android:textAlignment="center"
                     android:textColor="#ffffff"
                     android:layout_marginTop="10dp"
@@ -48,7 +52,7 @@
                     android:layout_margin="15dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
-                    android:background="@drawable/degradado"
+                    android:background="@color/colorAccent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
@@ -101,12 +105,12 @@
                     android:layout_marginLeft="-10dp"
                     android:layout_marginTop="0dp"
                     android:layout_marginRight="0dp"
-                    android:background="@drawable/degradado" />
+                    android:background="@color/colorAccent" />
 
                 <TextView
                     android:id="@+id/tituloEvento"
                     android:textSize="18sp"
-                    android:textColor="#1A1A1A"
+                    android:textColor="@color/colorblanco"
                     android:text="Evento"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -115,6 +119,7 @@
                     android:id="@+id/descripcionEvento"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/colorblanco"
                     android:layout_below="@id/tituloEvento"
                     android:layout_marginTop="0dp"
                     android:text="Descripcion" />
@@ -124,13 +129,14 @@
                     android:layout_alignParentRight="true"
                     android:text="Ver detalles"
                     android:layout_centerVertical="true"
+                    android:backgroundTint="@color/colorPrimary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
             </RelativeLayout>
 
             <TextView
-                android:background="#414141"
+                android:background="@color/colorblanco"
                 android:layout_marginBottom="7dp"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"/>
