--- a/app/src/main/res/layout/custom_layout.xml
+++ b/app/src/main/res/layout/custom_layout.xml
@@ -7,25 +7,10 @@
     android:orientation="vertical"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="match_parent"
-        android:layout_height="121dp" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/fonts"
-        android:gravity="center"
-        android:text="ÚLTIMOS EVENTOS"
-        android:textColor="@color/colorblanco"
-        android:textSize="50dp" />
-
     <ImageView
         android:id="@+id/image_view"
         android:layout_width="match_parent"
-        android:layout_height="415dp"
+        android:layout_height="match_parent"
 
         android:scaleType="centerCrop"
         tools:ignore="MissingConstraints" />
