--- a/app/src/main/res/layout/layout_eventos.xml
+++ b/app/src/main/res/layout/layout_eventos.xml
@@ -35,6 +35,7 @@
                     android:textSize="12sp"
                     android:padding="2dp"
                     android:width="80dp"
+                    android:fontFamily="@font/fonts"
                     android:backgroundTint="@color/colorPrimaryDark"
                     android:textAlignment="center"
                     android:textColor="#ffffff"
@@ -68,6 +69,7 @@
                         android:id="@+id/calificacionEvento"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/fonts"
                         android:layout_marginLeft="63dp"
                         android:layout_toRightOf="@id/imagenCalificacionEvento"
                         android:text="78%"
@@ -81,6 +83,7 @@
                         android:textSize="10sp"
                         android:layout_centerHorizontal="true"
                         android:layout_below="@id/calificacionEvento"
+                        android:fontFamily="@font/fonts"
                         android:textColor="@android:color/white"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
@@ -111,6 +114,7 @@
                     android:id="@+id/tituloEvento"
                     android:textSize="18sp"
                     android:textColor="@color/colorblanco"
+                    android:fontFamily="@font/fonts"
                     android:text="Evento"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -118,6 +122,7 @@
                 <TextView
                     android:id="@+id/descripcionEvento"
                     android:layout_width="wrap_content"
+                    android:fontFamily="@font/fonts"
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorblanco"
                     android:layout_below="@id/tituloEvento"
@@ -126,6 +131,7 @@
 
                 <Button
                     android:id="@+id/botonDetallesEvento"
+                    android:fontFamily="@font/fonts"
                     android:layout_alignParentRight="true"
                     android:text="Ver detalles"
                     android:layout_centerVertical="true"
@@ -137,6 +143,7 @@
 
             <TextView
                 android:background="@color/colorblanco"
+                android:fontFamily="@font/fonts"
                 android:layout_marginBottom="7dp"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"/>
