-se añadio animación al botón de ver detalles -se agregó el diseño al fragment de información del evento
Signed-off-by: Cristian1Alexar <36050372+Cristian1Alexar@users.noreply.github.com>

--- a/app/src/main/res/layout/layout_eventos.xml
+++ b/app/src/main/res/layout/layout_eventos.xml
@@ -140,11 +140,12 @@
                     android:layout_alignParentRight="true"
                     android:text="Ver detalles"
                     android:fontFamily="@font/fonts"
-                    android:textColor="#FFFF"
+                    android:textColor="@drawable/txtbtninicio"
                     android:layout_centerVertical="true"
                     android:layout_width="100dp"
                     android:layout_height="35dp"
                     android:background="@drawable/btndetalles"
+
                     android:layout_marginRight="20dp"/>
 
             </RelativeLayout>
