--- a/app/src/main/res/layout/activity_informacion_evento.xml
+++ b/app/src/main/res/layout/activity_informacion_evento.xml
@@ -4,73 +4,98 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.InformacionEvento">
+    tools:context=".Activities.InformacionEvento"
+    android:background="#feac00">
 
     <ImageView
         android:id="@+id/imagenEvento"
-        android:layout_width="match_parent"
-        android:layout_height="195dp"
+        android:layout_width="473dp"
+        android:layout_height="244dp"
         android:background="@drawable/evento3"
         android:scaleType="matrix"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.258"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.115" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/tituloEventoSeleccionado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="268dp"
+        android:layout_width="375dp"
+        android:layout_height="124dp"
+        android:layout_marginTop="256dp"
+        android:fontFamily="@font/fonts"
+        android:gravity="center"
         android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.045"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textAlignment="center"
+        android:textColor="#FFFF"
+        android:textSize="40dp"
 
-    <TextView
-        android:id="@+id/descripcionEventoSeleccionado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="304dp"
-        android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.045"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/direccionEventoSeleccionado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="344dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.045"
+        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/fechaEventoSeleccionado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="388dp"
+        android:layout_width="310dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="468dp"
+        android:background="#df2662"
+        android:fontFamily="@font/fonts"
+        android:gravity="center"
         android:text="TextView"
+        android:textColor="#FFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.045"
+        app:layout_constraintHorizontal_bias="0.584"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/descripcionEventoSeleccionado"
+        android:layout_width="310dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="388dp"
+        android:background="#df2662"
+        android:fontFamily="@font/fonts"
+        android:gravity="center"
+        android:text="TextView"
+        android:textColor="#FFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.584"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/direccionEventoSeleccionado"
+        android:layout_width="310dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="428dp"
+        android:background="#df2662"
+        android:fontFamily="@font/fonts"
+        android:gravity="center"
+        android:text="TextView"
+        android:textColor="#FFFF"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.584"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/horaEventoSeleccionado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="432dp"
+        android:layout_width="310dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="508dp"
+        android:background="#df2662"
+        android:fontFamily="@font/fonts"
+        android:gravity="center"
         android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="#FFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.045"
+        app:layout_constraintHorizontal_bias="0.584"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -78,27 +103,35 @@
         android:id="@+id/boton_regresar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Regresar"
+        android:background="@drawable/btndetalles"
+
+        android:fontFamily="@font/fonts"
+        android:text="regresar"
+        android:textColor="@drawable/txtbtninicio"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976" />
+        app:layout_constraintVertical_bias="0.96" />
 
     <Button
         android:id="@+id/boton_Maps"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:text="Ver en Maps"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.849" />
+        android:fontFamily="@font/fonts"
+        app:layout_constraintVertical_bias="0.849"
+        android:textColor="@drawable/txtbtninicio"
+        android:background="@drawable/btndetalles"
+        />
 
     <Button
         android:id="@+id/boton_reservar"
@@ -107,11 +140,14 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:text="Reservar"
+        android:textColor="@drawable/txtbtninicio"
+        android:background="@drawable/btndetalles"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.85"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:fontFamily="@font/fonts"
         app:layout_constraintVertical_bias="0.849" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
