Se listan los comentarios en los eventos específicos, y se agregó la opción de comentar desde dentro de la app

--- a/app/src/main/res/layout/activity_informacion_evento.xml
+++ b/app/src/main/res/layout/activity_informacion_evento.xml
@@ -7,147 +7,285 @@
     tools:context=".Activities.InformacionEvento"
     android:background="#feac00">
 
-    <ImageView
-        android:id="@+id/imagenEvento"
-        android:layout_width="473dp"
-        android:layout_height="244dp"
-        android:background="@drawable/evento3"
-        android:scaleType="matrix"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refreshComentarios"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.258"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0">
 
-    <TextView
-        android:id="@+id/tituloEventoSeleccionado"
-        android:layout_width="375dp"
-        android:layout_height="124dp"
-        android:layout_marginTop="256dp"
-        android:fontFamily="@font/fonts"
-        android:gravity="center"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textColor="#FFFF"
-        android:textSize="40dp"
 
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/fechaEventoSeleccionado"
-        android:layout_width="310dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="468dp"
-        android:background="#df2662"
-        android:fontFamily="@font/fonts"
-        android:gravity="center"
-        android:text="TextView"
-        android:textColor="#FFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.584"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <Button
+                android:id="@+id/boton_Maps"
+                android:layout_width="700dp"
+                android:layout_height="50dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="230dp"
+                android:layout_marginLeft="230dp"
+                android:layout_marginTop="475dp"
+                android:layout_marginEnd="46dp"
+                android:layout_marginRight="46dp"
+                android:background="@drawable/btndetalles"
+                android:fontFamily="@font/fonts"
+                android:text="Ver en Maps"
+                android:textSize="10dp"
+                android:textColor="@drawable/txtbtninicio" />
 
-    <TextView
-        android:id="@+id/descripcionEventoSeleccionado"
-        android:layout_width="310dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="388dp"
-        android:background="#df2662"
-        android:fontFamily="@font/fonts"
-        android:gravity="center"
-        android:text="TextView"
-        android:textColor="#FFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.584"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <Button
+                android:id="@+id/boton_regresar"
+                android:layout_width="700dp"
+                android:layout_height="50dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="15dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="21dp"
+                android:layout_marginEnd="290dp"
+                android:layout_marginRight="290dp"
+                android:background="@drawable/btndetalles"
+                android:fontFamily="@font/fonts"
+                android:text="regresar"
+                android:textSize="10dp"
+                android:textColor="@drawable/txtbtninicio" />
 
-    <TextView
-        android:id="@+id/direccionEventoSeleccionado"
-        android:layout_width="310dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="428dp"
-        android:background="#df2662"
-        android:fontFamily="@font/fonts"
-        android:gravity="center"
-        android:text="TextView"
-        android:textColor="#FFFF"
+            <TextView
+                android:id="@+id/tituloEventoSeleccionado"
+                android:layout_width="365dp"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/imagenEvento"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="246dp"
+                android:layout_marginEnd="0dp"
+                android:layout_marginRight="0dp"
+                android:fontFamily="@font/fonts"
+                android:gravity="center"
+                android:text="TextView"
+                android:textAlignment="center"
+                android:textColor="#FFFF"
+                android:textSize="35dp" />
 
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.584"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <Button
+                android:id="@+id/boton_reservar"
+                android:layout_width="700dp"
+                android:layout_height="50dp"
+                android:layout_alignTop="@+id/boton_regresar"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="54dp"
+                android:layout_marginLeft="54dp"
+                android:layout_marginTop="452dp"
+                android:layout_marginEnd="230dp"
+                android:layout_marginRight="269dp"
+                android:background="@drawable/btndetalles"
+                android:fontFamily="@font/fonts"
+                android:text="Reservar"
+                android:textSize="10dp"
+                android:textColor="@drawable/txtbtninicio" />
 
-    <TextView
-        android:id="@+id/horaEventoSeleccionado"
-        android:layout_width="310dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="508dp"
-        android:background="#df2662"
-        android:fontFamily="@font/fonts"
-        android:gravity="center"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textColor="#FFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.584"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/direccionEventoSeleccionado"
+                android:layout_width="310dp"
+                android:layout_height="40dp"
+                android:layout_alignTop="@+id/imagenEvento"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="54dp"
 
-    <Button
-        android:id="@+id/boton_regresar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/btndetalles"
+                android:layout_marginLeft="54dp"
+                android:layout_marginTop="345dp"
+                android:layout_marginEnd="47dp"
+                android:layout_marginRight="47dp"
+                android:background="#df2662"
+                android:fontFamily="@font/fonts"
+                android:gravity="center"
+                android:text="TextView"
+                android:textColor="#FFFF" />
 
-        android:fontFamily="@font/fonts"
-        android:text="regresar"
-        android:textColor="@drawable/txtbtninicio"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.538"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.96" />
+            <TextView
+                android:id="@+id/descripcionEventoSeleccionado"
+                android:layout_width="310dp"
+                android:layout_height="40dp"
+                android:layout_alignTop="@+id/imagenEvento"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="54dp"
+                android:layout_marginLeft="54dp"
+                android:layout_marginTop="305dp"
+                android:layout_marginEnd="47dp"
+                android:layout_marginRight="47dp"
+                android:background="#df2662"
+                android:fontFamily="@font/fonts"
+                android:gravity="center"
+                android:text="TextView"
+                android:textColor="#FFFF" />
 
-    <Button
-        android:id="@+id/boton_Maps"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:text="Ver en Maps"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:fontFamily="@font/fonts"
-        app:layout_constraintVertical_bias="0.849"
-        android:textColor="@drawable/txtbtninicio"
-        android:background="@drawable/btndetalles"
-        />
+            <TextView
+                android:id="@+id/fechaEventoSeleccionado"
+                android:layout_width="310dp"
+                android:layout_height="40dp"
+                android:layout_alignTop="@+id/imagenEvento"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="54dp"
+                android:layout_marginLeft="54dp"
+                android:layout_marginTop="385dp"
+                android:layout_marginEnd="47dp"
+                android:layout_marginRight="47dp"
+                android:background="#df2662"
+                android:fontFamily="@font/fonts"
+                android:gravity="center"
+                android:text="TextView"
+                android:textColor="#FFFF" />
 
-    <Button
-        android:id="@+id/boton_reservar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
-        android:text="Reservar"
-        android:textColor="@drawable/txtbtninicio"
-        android:background="@drawable/btndetalles"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.85"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:fontFamily="@font/fonts"
-        app:layout_constraintVertical_bias="0.849" />
+            <TextView
+                android:id="@+id/horaEventoSeleccionado"
+                android:layout_width="310dp"
+                android:layout_height="40dp"
+                android:layout_alignTop="@+id/imagenEvento"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="54dp"
+                android:layout_marginLeft="54dp"
+                android:layout_marginTop="425dp"
+                android:layout_marginEnd="47dp"
+                android:layout_marginRight="47dp"
+                android:background="#df2662"
+                android:fontFamily="@font/fonts"
+                android:gravity="center"
+                android:text="TextView"
+                android:textAlignment="center"
+                android:textColor="#FFFF" />
+
+            <ImageView
+                android:id="@+id/imagenEvento"
+                android:layout_width="411dp"
+                android:layout_height="232dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="0dp"
+                android:layout_marginRight="0dp"
+                android:background="@drawable/evento3"
+                android:scaleType="matrix" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerComentariosEventos"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="2dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="664dp"
+                android:layout_marginEnd="-2dp"
+                android:layout_marginRight="-2dp"
+                tools:listitem="@layout/layout_comentarios" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="32dp"
+                android:layout_marginLeft="32dp"
+                android:layout_marginTop="550dp"
+                android:layout_marginEnd="200dp"
+                android:layout_marginRight="320dp"
+                android:paddingLeft="10dp"
+                android:textColor="#FFF"
+                android:text="Comentarios" />
+
+            <EditText
+                android:id="@+id/texto_comentario"
+                android:layout_width="100dp"
+                android:layout_height="65dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="32dp"
+                android:layout_marginLeft="32dp"
+                android:background="#FFFF"
+                android:textColor="#b8b6b0"
+                android:layout_marginTop="575dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginRight="20dp"
+                android:paddingLeft="10dp"
+                android:textSize="15dp"
+                android:gravity="top"
+                android:hint="Comenta algo ;)" />
+
+            <Button
+                android:id="@+id/boton_comentar"
+                android:layout_width="40dp"
+                android:layout_height="30dp"
+                android:text="Comentar"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="200dp"
+                android:layout_marginLeft="200dp"
+                android:background="@drawable/btndetalles"
+                android:layout_marginTop="625dp"
+                android:textAlignment="center"
+                android:fontFamily="@font/fonts"
+                android:textColor="#FFFF"
+                android:layout_marginEnd="30dp"
+                android:layout_marginRight="20dp"
+                />
+
+        </RelativeLayout>
+    </ScrollView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
