--- a/app/src/main/res/layout/activity_mapa.xml
+++ b/app/src/main/res/layout/activity_mapa.xml
@@ -25,8 +25,8 @@
 
     <ImageButton
         android:id="@+id/boton_regresar"
-        android:layout_width="33dp"
-        android:layout_height="42dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
@@ -45,6 +45,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Regresar al evento"
+        android:background="@drawable/btndetalles"
+        android:textColor="@drawable/txtbtninicio"
+        android:textSize="10dp"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.932"
