Funcionalidad de reservas ya casi terminada, falta sumar los precios de los asientos y ver si selecciona de otras localidades para tramitar el pago, se hicieron cambios a la clase ButtonOnClickListener y se le cambio al nombre de AdapterButtonOnClickListener esto para adaptarlo a nuestro proyecto. También se creo un nuevo layout en la carpeta res para el cuadro de dialogo

--- a/app/src/main/res/layout/activity_reservas.xml
+++ b/app/src/main/res/layout/activity_reservas.xml
@@ -11,7 +11,7 @@
 
     <ScrollView
         android:layout_width="347dp"
-        android:layout_height="479dp"
+        android:layout_height="309dp"
         android:layout_x="31dp"
         android:layout_y="159dp">
 
@@ -44,6 +44,14 @@
 
         android:text="Seleccione Localidad"
         android:textAlignment="center" />
+
+    <Button
+        android:id="@+id/btnReserva"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_x="73dp"
+        android:layout_y="493dp"
+        android:text="Anular asientos seleccionados" />
 
 
 </AbsoluteLayout>
